--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,7 @@ nav ul li a:hover::after{
      left: 0;
      bottom: -8px;
      transition: 0.5s;
+
 }
 
 
@@ -364,8 +365,8 @@ form .btn2{
      margin-top: 20px;
 }
 /* end of contact */
-nav .fas{
-     display: hidden;
+nav .fa-solid{
+     display: none;
 }
 
 /* css for small screen */
@@ -380,7 +381,7 @@ nav .fas{
      .header-text h1{
           font-size: 30px;
      }
-     nav .fas{
+     nav .fa-solid{
           display: block;
           font-size: 25px;
      }
@@ -401,7 +402,7 @@ nav .fas{
 
      }
 
-     nav ul .fas{
+     nav ul .fa-solid{
           position: absolute;
           top: 25px;
           left: 25px;
